# polkadot-sdk-parachain-template

./: Cargo.toml  README.md  chain-spec-plain.json  chain-spec-raw.json  genesis-state-5021.hex  genesis-wasm-5021.wasm  test-agora  test-agora-runtime.rs  zombienet-omni-node.toml  zombienet.toml
data/chains/local_testnet/network/: secret_ed25519
pallets/agora/: Cargo.toml
pallets/agora/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
